--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 <a href="#"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
             </section>
 
-            <div class="section wb">
+            <div class="section wb bg-body">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
                                 <h4>SOBRE</h4>
-                                <h3 style="font-size:29px">Bem-vindo ao <b>Salão de Beleza da July</b></h3>
+                                <h3 style="font-size:29px" class="titulo-destaque">Bem-vindo ao <b>Salão de Beleza da July</b></h3>
                                 <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 
                                 <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
