--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('uploads/parallax_20.jpg');">
+            <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('/images/banner-testemunho.jpg');">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>RECOMENDAÇÕES DE CLIENTES</small>
+                        <small>DECLARAÇÃO DE CLIENTES</small>
                         <h3>RECOMENDAÇÕES</h3>
                         <hr class="grd1">
                         <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
