--- a/horario.html
+++ b/horario.html
@@ -177,6 +177,44 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
+            <hr class="hr3"/>
+            <!-- MAPA -->
+
+            <div>
+                <div class="section-title row text-center">
+                    <div class="col-md-8 col-md-offset-2">
+                    <small>LOCALIZAÇÃO</small>
+                    <h3 class="titulo-destaque">Localização do <i>Salão</i></h3>
+                    <hr class="grd1">
+                    <p class="lead">Com ajuda do Google Maps apresentamos a localização exata do <b>Salão de Beleza da July</b>.</p>
+                    </div>
+                </div><!-- end title -->                
+                <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.852392071879!2d13.33317331491239!3d-8.893312493682407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f736bdb44bbd%3A0x9aac39e6b6acfb7a!2sConsult%C3%B3rio%20Dent%C3%A1rio%20FloriDente!5e0!3m2!1spt-PT!2sao!4v1653498173054!5m2!1spt-PT!2sao" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="contact">
+            <div class="info">
+                <div class="address">
+                  <i class="fa fa-globe"></i>
+                  <h4>Localização</h4>
+                  <p>Benguela, Benguela, Bairro do Calombutão</p>
+                </div>
+  
+                <div class="email">
+                  <i class="fa fa-envelope"></i>
+                  <h4>Email</h4>
+                  <p>emaildosalao@gmail.com</p>
+                </div>
+  
+                <div class="phone">
+                  <i class="fa fa-phone"></i>
+                  <h4>Telefone</h4>
+                  <p>+244 911 111 111</p>
+                </div>
+  
+              </div>
+            </div>
+            <!-- END SECTION MAPA -->
+
             <div class="copyrights">
                 <div class="container-fluid">
                     <div class="footer-distributed">
