--- a/horario.html
+++ b/horario.html
@@ -189,7 +189,7 @@
                     <p class="lead">Com ajuda do Google Maps apresentamos a localização exata do <b>Salão de Beleza da July</b>.</p>
                     </div>
                 </div><!-- end title -->                
-                <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.852392071879!2d13.33317331491239!3d-8.893312493682407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f736bdb44bbd%3A0x9aac39e6b6acfb7a!2sConsult%C3%B3rio%20Dent%C3%A1rio%20FloriDente!5e0!3m2!1spt-PT!2sao!4v1653498173054!5m2!1spt-PT!2sao" frameborder="0" allowfullscreen></iframe>
+                <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3893.7813400085556!2d13.384840258062647!3d-12.596657733512236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1bafd1b67e1029a7%3A0x14c4e884865e4abf!2sKero!5e0!3m2!1spt-PT!2sao!4v1655040330249!5m2!1spt-PT!2sao" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="contact">
             <div class="info">
