--- a/horario.html
+++ b/horario.html
@@ -141,8 +141,9 @@
                                 <div id="message">
                                     <h3 class="form-contact-title">Formulário de Contato</h3>
                                 </div>
-                                <form id="contactform" class="row" action="contact.php" name="contactform" method="post">
+                                <form id="contactform" class="row" method="post" action="mailto:franciscofetapi10@gmail.com" name="contactform" enctype="multipart/form-data">
                                     <fieldset class="row-fluid">
+                                        <input type="hidden" name="subject" value="Salão da July - Agendamento"/>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" name="first_name" id="first_name" class="form-control" placeholder="Nome">
                                         </div>
@@ -164,7 +165,7 @@
                                             </select>
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Escreva alguma mensagem"></textarea>
+                                            <textarea class="form-control" name="body" id="comments" rows="6" placeholder="Escreva alguma mensagem"></textarea>
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                                             <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 subt">Enviar</button>
